# mrs_precise_landing

./: README.md
ros_packages/mrs_landing_pad_estimation/: CMakeLists.txt  nodelets.xml  package.xml
ros_packages/mrs_landing_pad_estimation/config/: .landing_pad_estimation.yaml.swp  apriltag_recursive.yaml  debug_verbosity.yaml  landing_pad_estimation.yaml
ros_packages/mrs_landing_pad_estimation/launch/: .apriltag_detector.launch.swp  .landing_tag_detection.launch.swp  apriltag_detector.launch  landing_pad_estimation.launch  landing_tag_detection.launch
ros_packages/mrs_landing_pad_estimation/src/: .landing_pad_estimation.cpp.swp  landing_pad_estimation.cpp
ros_packages/mrs_precise_landing/: CMakeLists.txt  README.md  nodelets.xml  package.xml
ros_packages/mrs_precise_landing/config/: .precise_landing.yaml.swp  apriltag_normal.yaml  apriltag_recursive.yaml  debug_verbosity.yaml  precise_landing.yaml
ros_packages/mrs_precise_landing/launch/: apriltag_detector.launch  precise_landing.launch
ros_packages/mrs_precise_landing/src/: .precise_landing.cpp.swp  precise_landing.cpp
ros_packages/mrs_precise_landing_gazebo/: CMakeLists.txt  package.xml
ros_packages/mrs_precise_landing_gazebo/models/Apriltag16_05_00000/: model.config  model.sdf
ros_packages/mrs_precise_landing_gazebo/models/Apriltag16_05_00000/materials/scripts/: Apriltag.material
ros_packages/mrs_precise_landing_gazebo/models/Apriltag16_05_00001/: model.config  model.sdf
ros_packages/mrs_precise_landing_gazebo/models/Apriltag16_05_00001/materials/scripts/: Apriltag.material
ros_packages/mrs_precise_landing_gazebo/models/Apriltag16_05_00002/: model.config  model.sdf
ros_packages/mrs_precise_landing_gazebo/models/Apriltag16_05_00002/materials/scripts/: Apriltag.material
ros_packages/mrs_precise_landing_gazebo/models/Apriltag16_05_00003/: model.config  model.sdf
ros_packages/mrs_precise_landing_gazebo/models/Apriltag16_05_00003/materials/scripts/: Apriltag.material
ros_packages/mrs_precise_landing_gazebo/models/Apriltag16_05_00004/: model.config  model.sdf
ros_packages/mrs_precise_landing_gazebo/models/Apriltag16_05_00004/materials/scripts/: Apriltag.material
ros_packages/mrs_precise_landing_gazebo/models/Apriltag_recursive1/: model.config  model.sdf
ros_packages/mrs_precise_landing_gazebo/models/Apriltag_recursive1/materials/scripts/: Apriltag.material
ros_packages/mrs_precise_landing_gazebo/tmux/: layout.json  rviz.rviz  session.yml
ros_packages/mrs_precise_landing_gazebo/tmux/config/: custom_config.yaml  landing_controller.yaml  landing_estimator.yaml  world_config.yaml
ros_packages/mrs_precise_landing_gazebo/tmux/recursive/: rviz.rviz  session.yml
ros_packages/mrs_precise_landing_gazebo/tmux/recursive/config/: apriltag.yaml  custom_config.yaml  landing_controller.yaml  landing_estimator.yaml
ros_packages/mrs_precise_landing_gazebo/worlds/: apriltag.world  apriltag_recursive.world
