<?xml version="1.0"?>
<package format="2">

  <name>mrs_precise_landing</name>
  <version>1.0.0</version>
  <description>mrs_precise_landing</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>nodelet</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_landing_pad_estimation</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
