<?xml version="1.0"?>
<package format="2">

  <name>mrs_precise_landing_gazebo</name>
  <version>1.0.0</version>
  <description>mrs_precise_landing_gazebo</description>

  <license>MIT</license>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>

</package>
